# tesouro_direto_br

./: LICENSE.md  README.md  pyproject.toml  requirements.txt  setup.py  version.py
src/tesouro_direto_br/: .gitignore  __init__.py  tabela_iof_investimentos.xlsx  tesouro_direto_br.py  version.py
tests/: test_tesouro_direto_br.py
