[tool.poetry]
name = "tesouro_direto_br"
version = "0.3"
description = "Gerenciamento da Carteira de Titulos Publicos Federais com dados do Tesouro Direto"
readme = "README.md"
authors = ["Rafael Rodrigues <rafael.rafarod@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.3"
requests = "^2.28.2"
pyettj = "^0.2.4"
matplotlib = "^3.6.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"