[tool.poetry]
name = "tesouro_direto_br"
version = "0.3.3"
description = "Gerenciamento da Carteira de Titulos Publicos Federais com dados do Tesouro Direto"
readme = "README.md"
authors = ["Rafael Rodrigues <rafael.rafarod@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.5"
pandas = [
    {version = ">=1.3.0, <=1.5.3", python = "<=3.9"},
    {version = ">=2.1.0", python = ">=3.10"}
]
requests = "^2.31"
matplotlib = [
    {version = "<=3.7.1", python = "<=3.9"},
    {version = ">=3.10.0", python = ">=3.10"}
]
numpy = [
    {version = ">=1.24.4, <1.26.0", python = "<=3.9"},
    {version = ">=1.26.0", python = ">=3.10"}
]
scipy = [
    {version = ">=1.5.1,<=1.10.1", python = "<=3.9"},
    {version = ">=1.11.0", python = ">=3.10"}
]
pyettj = [
    {version = "<=0.3.2", python = "<=3.9"},
    {version = ">=0.3.3", python = ">=3.10"}
]
comparar_fundos_br = [
    {version = "<=0.1.1", python = "<=3.9"},
    {version = ">=0.1.2", python = ">=3.10"}
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"